feat: app error handling

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -20,7 +20,11 @@
   "madeWith": "Made with",
   "by": "by",
   "loginError": "Invalid email or password",
-  "registerError": "There was an error while trying to register",
+  "registerError": "Error while trying to register",
+  "saveError": "Error while saving",
+  "createError": "Error while creating",
+  "deleteError": "Error while deleting",
+  "getError": "Error while searching",
   "Login": "Login",
   "Password": "Password",
   "IDontHaveAnAccount": "I don't have an account",
