--- a/src/assets/i18n/pt-BR.json
+++ b/src/assets/i18n/pt-BR.json
@@ -20,7 +20,11 @@
   "madeWith": "Feito com",
   "by": "por",
   "loginError": "Dados inválidos",
-  "registerError": "Houve um erro ao criar a conta",
+  "registerError": "Erro ao criar a conta",
+  "saveError": "Erro ao salvar",
+  "createError": "Erro ao criar",
+  "deleteError": "Erro ao excluir",
+  "getError": "Erro ao buscar",
   "Login": "Entrar",
   "Password": "Senha",
   "IDontHaveAnAccount": "Eu não tenho uma conta",
