feat: multiple style upgrades

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -32,8 +32,8 @@
   "Name": "Name",
   "IAlreadyHaveAnAccount": "I already have an account",
   "SignedOut": "Signed out",
-  "Notes": "Notes",
-  "NewNote": "New Note",
+  "Notes": "My notes",
+  "NewNote": "Create note",
   "SelectOneOfYourNotesOr": "Select one of your notes or",
   "createANewOne": "create a new one",
   "DeleteNote?": "Delete note?",
@@ -42,7 +42,7 @@
   "Exit": "Exit",
   "AreYouSureYouWantToLogoutAndExit?": "Are you sure you want to logout and exit?",
   "Yes,exit": "Yes, exit",
-  "newNoteTitle": "New note",
+  "newNoteTitle": "New Note",
   "newNoteContent": "You can edit this from anywhere at anytime.",
   "Cancel": "Cancel",
   "emailInputHelp": "You must have access to this e-mail to confirm your account.",
