--- a/src/assets/i18n/pt-BR.json
+++ b/src/assets/i18n/pt-BR.json
@@ -18,7 +18,7 @@
     }
   },
   "madeWith": "Feito com",
-  "by": "por",
+  "by": "pela",
   "loginError": "Dados inválidos",
   "registerError": "Erro ao criar a conta",
   "saveError": "Erro ao salvar",
@@ -32,8 +32,8 @@
   "Name": "Nome",
   "IAlreadyHaveAnAccount": "Eu já tenho uma conta",
   "SignedOut": "Deslogado",
-  "Notes": "Anotações",
-  "NewNote": "Nova Anotação",
+  "Notes": "Minhas anotações",
+  "NewNote": "Criar anotação",
   "SelectOneOfYourNotesOr": "Selecione uma das suas anotações ou",
   "createANewOne": "crie uma nova",
   "DeleteNote?": "Excluir anotação?",
