feat: linkTree feature

--- a/src/assets/i18n/pt-BR.json
+++ b/src/assets/i18n/pt-BR.json
@@ -34,7 +34,10 @@
   "SignedOut": "Deslogado",
   "Notes": "Minhas anotações",
   "NewNote": "Criar anotação",
+  "Links": "Minhas lsitas de links",
+  "NewLink": "Criar lista de links",
   "SelectOneOfYourNotesOr": "Selecione uma das suas anotações ou",
+  "SelectOneOfYourLinksOr": "Selecione uma das suas listas de links ou",
   "createANewOne": "crie uma nova",
   "DeleteNote?": "Excluir anotação?",
   "ThisActionCannotBeReverted": "Esta ação não poderá ser desfeita.",
@@ -44,6 +47,8 @@
   "Yes,exit": "Sim, sair",
   "newNoteTitle": "Nova anotação",
   "newNoteContent": "Você pode edita-la de qualquer lugar a qualquer momento.",
+  "newLinkTitle": "Nova lista de links",
+  "newLinkDescription": "Você pode edita-la de qualquer lugar a qualquer momento.",
   "Cancel": "Cancelar",
   "emailInputHelp": "Você precisa ter acesso a este e-mail para confirmar sua conta.",
   "passwordInputHelp": "Sua senha será criptografada e armazenada em um local seguro.",
