feat: link lists

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -33,10 +33,15 @@
   "IAlreadyHaveAnAccount": "I already have an account",
   "SignedOut": "Signed out",
   "Notes": "My notes",
+  "Links": "My link pages",
   "NewNote": "Create note",
+  "NewLink": "Create link page",
   "SelectOneOfYourNotesOr": "Select one of your notes or",
+  "SelectOneOfYourLinksOr": "Select one of your link page or",
   "createANewOne": "create a new one",
   "DeleteNote?": "Delete note?",
+  "DeleteLinkTree?": "Delete link page?",
+  "DeleteLink?": "Delete link?",
   "ThisActionCannotBeReverted": "This action cannot be reverted.",
   "Yes,delete": "Yes, delete",
   "Exit": "Exit",
@@ -44,6 +49,8 @@
   "Yes,exit": "Yes, exit",
   "newNoteTitle": "New Note",
   "newNoteContent": "You can edit this from anywhere at anytime.",
+  "newLinkTitle": "Click here to choose a title for your page",
+  "newLinkDescription": "Click here to write a description",
   "Cancel": "Cancel",
   "emailInputHelp": "You must have access to this e-mail to confirm your account.",
   "passwordInputHelp": "Your password will be encrypted and stored safely.",
@@ -51,5 +58,10 @@
   "registerSubtitle": "Fill the fields correctly to create your account.",
   "IAgreeToThe": "I agree to the",
   "termsAndConditions": "terms and conditions",
-  "termsFile": "terms.txt"
+  "termsFile": "terms.txt",
+  "404": "404 | Not found",
+  "Preview": "Preview",
+  "GoBackToHome": "Back to home",
+  "Welcome": "Welcome",
+  "ClickOnTheModuleYouWantToAccess": "Click on the module you want to access"
 }
