--- a/src/assets/i18n/pt-BR.json
+++ b/src/assets/i18n/pt-BR.json
@@ -34,12 +34,14 @@
   "SignedOut": "Deslogado",
   "Notes": "Minhas anotações",
   "NewNote": "Criar anotação",
-  "Links": "Minhas lsitas de links",
-  "NewLink": "Criar lista de links",
+  "Links": "Minhas páginas de links",
+  "NewLink": "Criar página de links",
   "SelectOneOfYourNotesOr": "Selecione uma das suas anotações ou",
-  "SelectOneOfYourLinksOr": "Selecione uma das suas listas de links ou",
+  "SelectOneOfYourLinksOr": "Selecione uma das suas páginas de links ou",
   "createANewOne": "crie uma nova",
   "DeleteNote?": "Excluir anotação?",
+  "DeleteLinkTree?": "Excluir página de links?",
+  "DeleteLink?": "Excluir link?",
   "ThisActionCannotBeReverted": "Esta ação não poderá ser desfeita.",
   "Yes,delete": "Sim, excluir",
   "Exit": "Sair",
@@ -47,8 +49,8 @@
   "Yes,exit": "Sim, sair",
   "newNoteTitle": "Nova anotação",
   "newNoteContent": "Você pode edita-la de qualquer lugar a qualquer momento.",
-  "newLinkTitle": "Nova lista de links",
-  "newLinkDescription": "Você pode edita-la de qualquer lugar a qualquer momento.",
+  "newLinkTitle": "Clique aqui para escolher um título",
+  "newLinkDescription": "Clique aqui para escolher uma descrição.",
   "Cancel": "Cancelar",
   "emailInputHelp": "Você precisa ter acesso a este e-mail para confirmar sua conta.",
   "passwordInputHelp": "Sua senha será criptografada e armazenada em um local seguro.",
@@ -56,5 +58,10 @@
   "registerSubtitle": "Preencha os campos corretamente para cadastrar sua conta.",
   "IAgreeToThe": "Eu aceito os",
   "termsAndConditions": "termos e condições",
-  "termsFile": "termos.txt"
+  "termsFile": "termos.txt",
+  "404": "404 | Não encontrado",
+  "Preview": "Prévia",
+  "GoBackToHome": "Voltar ao início",
+  "Welcome": "Bem vindo",
+  "ClickOnTheModuleYouWantToAccess": "Clique no módulo que deseja acessar"
 }
